--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
         run: mvn -B package --file pom.xml
 
       - name: unit test
-        run: mvn test
+        run: mvn test -Djava.awt.headless=true
