--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn -B verify sonar:sonar \
+          mvn -B clean verify sonar:sonar \
             -Dsonar.projectKey=Daniax18_tp_caclulette \
             -Dsonar.organization=daniax18 \
             -Dsonar.host.url=https://sonarcloud.io
