--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,3 +14,6 @@ sonar.tests=src/test/java
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
 sonar.language=java
+
+sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
